[gd_scene load_steps=3 format=3 uid="uid://cr8g4ismbp5vt"]

[ext_resource type="Script" uid="uid://koeg41l7lnxg" path="res://scenes/character_editor.gd" id="1_arwnc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q0e82"]

[node name="CharacterEditor" type="Control" node_paths=PackedStringArray("color_picker_button", "height_slider", "height_value_label", "radius_slider", "radius_value_label", "character_preview_mesh")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arwnc")
color_picker_button = NodePath("MarginContainer/VBoxContainer/GridContainer/ColorPickerButton")
height_slider = NodePath("MarginContainer/VBoxContainer/GridContainer/HeightSlider")
height_value_label = NodePath("MarginContainer/VBoxContainer/GridContainer/HeightValueLabel")
radius_slider = NodePath("MarginContainer/VBoxContainer/GridContainer/RadiusSlider")
radius_value_label = NodePath("MarginContainer/VBoxContainer/GridContainer/RadiusValueLabel")
character_preview_mesh = NodePath("MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/World3D/CharacterPreviewMesh")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 0
offset_right = 512.0
offset_bottom = 663.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Editor"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1

[node name="Height" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Height"

[node name="HeightSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.3
max_value = 2.0
step = 0.01
value = 2.0

[node name="HeightValueLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "2.00"

[node name="Width" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Width"

[node name="RadiusSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 0.5
step = 0.01
value = 0.5

[node name="RadiusValueLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "0.50"

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="MarginContainer/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(512, 382)
render_target_update_mode = 4

[node name="World3D" type="Node3D" parent="MarginContainer/VBoxContainer/SubViewportContainer/SubViewport"]

[node name="PreviewCamera" type="Camera3D" parent="MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/World3D"]
transform = Transform3D(0.96175134, -0.13653913, 0.23746897, 0, 0.8669151, 0.4984559, -0.27392417, -0.47939065, 0.8337567, 0.6001462, 1.2597284, 2.1071212)

[node name="PreviewLight" type="DirectionalLight3D" parent="MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/World3D"]
transform = Transform3D(0.7564007, 0.4129543, -0.50727385, 0, 0.7755194, 0.6313238, 0.6541085, -0.4775338, 0.5866034, -5.109613, 6.35913, 5.9086747)

[node name="CharacterPreviewMesh" type="MeshInstance3D" parent="MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/World3D"]
mesh = SubResource("CapsuleMesh_q0e82")

[node name="BackButon" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="color_changed" from="MarginContainer/VBoxContainer/GridContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/HeightSlider" to="." method="_on_height_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/RadiusSlider" to="." method="_on_radius_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButon" to="." method="_on_back_buton_pressed"]
